<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/mqtt_settings"
        android:title="@string/mqtt_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/menu_oss_licensing"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
